# OrderBook

./: .env  .gitignore  BufferHandler.cpp  BufferHandler.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Config.cpp  Config.hpp  Makefile  OrderBook.cpp  OrderBook.hpp  Packets.hpp  TcpHandler.cpp  TcpHandler.hpp  TcpHandler.inl  TcpPackets.hpp  UdpHandler.cpp  UdpHandler.hpp  UdpHandler.inl  UdpPackets.hpp  macros.hpp  main.cpp  utils.cpp  utils.hpp  utils.inl
incs/: Client.hpp  Config.hpp  MessageHandler.hpp  MessageHandler.inl  OrderBook.hpp  OrderBook.inl  Packets.hpp  Packets.tpp  error.inl  macros.hpp  packets.hpp
incs/utils/: utils.hpp  utils.tpp
incs/utils/simd/: simd_utils.hpp  simd_utils.inl  simd_utils.tpp
src/: AlignedAllocator.hpp  AlignedAllocator.tpp  Client.cpp  Client.hpp  Config.cpp  Config.hpp  ErrorHandler.cpp  ErrorHandler.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  OrderBook.cpp  OrderBook.hpp  OrderBook.inl  Packets.hpp  SanityChecker.cpp  SanityChecker.hpp  SanityChecker.inl  config.hpp  error.cpp  error.hpp  error.inl  macros.hpp  main.cpp  simd_utils.hpp  utils.cpp  utils.hpp  utils.inl
srcs/: Client.cpp  MessageHandler.cpp  OrderBook.cpp  error.cpp  main.cpp
